# pkmnprices-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/pkmnprices/: __init__.py  _endpoints.py  _http.py  aio.py  client.py  errors.py  models.py  pagination.py  resources.py
tests/: test_client.py
