[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkmnprices"
version = "1.0.1"
description = "Python client for the Pkmn Prices API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Pkmn Prices" }]
keywords = ["pokemon", "tcg", "pricing", "tcgplayer", "cardmarket", "ebay", "sdk", "api-client"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://pkmnprices.com"
Repository = "https://github.com/preaverage/pkmnprices-py"
Issues = "https://github.com/preaverage/pkmnprices-py/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "mypy>=1.10", "ruff>=0.5"]

[tool.hatch.build.targets.wheel]
packages = ["src/pkmnprices"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
